--- a/index.html
+++ b/index.html
@@ -4,148 +4,99 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shivdrishti Services</title>
-  <meta name="description" content="Shivdrishti Services offers CCTV installation, maintenance, solar panel installation, and solar servicing with trusted quality and modern technology." />
+  <meta name="description" content="CCTV installation, maintenance, solar panel installation and solar services in Pune." />
   <style>
     * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      transition: background 0.4s, color 0.4s;
-    }
-    body.dark { background: #0e0e0e; color: #eee; }
+    body { margin:0; font-family:Arial,sans-serif; }
+    body.dark { background:#0e0e0e; color:#eee; }
 
-    header {
-      padding: 25px;
-      text-align: center;
-      background: #0e0e0e;
-      color: white;
-    }
-    header img { width: 180px; animation: fadeIn 1.3s; }
+    header { background:#0e0e0e; color:white; text-align:center; padding:25px; }
+    header img { width:180px; }
 
-    nav {
-      background: #131313;
-      padding: 15px;
-      text-align: center;
-      position: sticky;
-      top: 0; z-index: 1000;
-    }
-    nav a {
-      color: #e3c87b;
-      margin: 0 18px;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    nav { background:#131313; padding:15px; text-align:center; position:sticky; top:0; }
+    nav a { color:#e3c87b; margin:0 15px; text-decoration:none; font-weight:bold; }
 
-    .theme-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #e3c87b;
-      padding: 10px 15px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+    .theme-toggle { position:fixed; top:20px; right:20px; background:#e3c87b; padding:10px; cursor:pointer; border-radius:6px; }
 
     .hero {
-      background: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=2000&q=80') center/cover;
-      height: 450px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 0 3px 10px rgba(0,0,0,0.7);
-      font-size: 2.3rem;
-      text-align: center;
-      padding: 20px;
-      animation: fadeIn 2s;
+      height:420px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:2.2rem;
+      color:white;
+      background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('CCTV_H.png') center/cover;
+      text-align:center;
     }
 
-    section { padding: 50px 20px; max-width: 1100px; margin: auto; }
-    h2 { text-align: center; font-size: 2rem; margin-bottom: 25px; animation: slideIn 1s; }
+    section { max-width:1100px; margin:auto; padding:50px 20px; }
+    h2 { text-align:center; margin-bottom:30px; }
 
     .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:25px;
     }
 
     .card {
-      background: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      animation: fadeIn 1.2s;
+      background:white;
+      border-radius:12px;
+      overflow:hidden;
+      box-shadow:0 4px 12px rgba(0,0,0,.15);
     }
-    body.dark .card { background: #1a1a1a; }
+    body.dark .card { background:#1a1a1a; }
 
-    .card img { width: 100%; height: 180px; object-fit: cover; }
-
-    .card-content { padding: 20px; }
+    .card img { width:100%; height:180px; object-fit:cover; }
+    .card-content { padding:20px; }
 
     form {
-      max-width: 600px;
-      margin: auto;
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      animation: fadeIn 1.2s;
+      max-width:600px;
+      margin:auto;
+      background:white;
+      padding:25px;
+      border-radius:10px;
     }
-    body.dark form { background: #1a1a1a; }
+    body.dark form { background:#1a1a1a; }
 
     input, textarea {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
+      width:100%;
+      padding:12px;
+      margin:10px 0;
+      border-radius:6px;
+      border:1px solid #ccc;
     }
 
     button {
-      width: 100%;
-      padding: 15px;
-      border: none;
-      background: #e3c87b;
-      font-size: 1.1rem;
-      border-radius: 8px;
-      cursor: pointer;
+      width:100%;
+      padding:14px;
+      background:#e3c87b;
+      border:none;
+      border-radius:6px;
+      font-size:1rem;
+      cursor:pointer;
     }
 
-    footer {
-      text-align: center;
-      padding: 25px;
-      background: #0e0e0e;
-      color: white;
-      margin-top: 40px;
-    }
+    footer { background:#0e0e0e; color:white; text-align:center; padding:25px; }
 
-    /* WhatsApp Floating Button */
     .whatsapp {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: white;
-      padding: 15px;
-      border-radius: 50%;
-      font-size: 22px;
-      text-decoration: none;
-      box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+      position:fixed;
+      bottom:20px;
+      right:20px;
+      background:#25d366;
+      color:white;
+      padding:15px;
+      border-radius:50%;
+      text-decoration:none;
+      font-size:22px;
     }
-
-    /* Animations */
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    @keyframes slideIn { from { transform: translateY(40px); opacity: 0;} to { transform: translateY(0); opacity: 1;} }
-
   </style>
 </head>
 <body>
 
-<div class="theme-toggle" onclick="toggleTheme()">Toggle Theme</div>
+<div class="theme-toggle" onclick="document.body.classList.toggle('dark')">Toggle Theme</div>
 
 <header>
-  <img src="FinalLogo.png" alt="Shivdrishti Services Logo" />
+  <img src="FinalLogo.png" alt="Shivdrishti Services Logo">
   <h1>Shivdrishti Services</h1>
   <p>Where Technology Meets Trust</p>
 </header>
@@ -156,66 +107,53 @@
   <a href="#contact">Contact</a>
 </nav>
 
-<div class="hero">Advanced CCTV & Solar Solutions for Home & Business</div>
+<div class="hero">Advanced CCTV & Solar Solutions</div>
 
 <section id="services">
-  <h2>Our Services</h2>
-  <div class="grid">
-
-    <div class="card">
-     <img src="CCTV_W.png" />
-      <div class="card-content"><h3>CCTV Installation</h3><p>Reliable, high‑quality surveillance setup for homes and commercial spaces.</p></div>
-    </div>
-
-    <div class="card">
-     <img src="Solar_M.png" />
-      <div class="card-content"><h3>CCTV Maintenance</h3><p>Regular system checks, rewiring, lens cleaning, and software optimization.</p></div>
-    </div>
-
-    <div class="card">
-      <img src="CCTV_H.png" />
-      <div class="card-content"><h3>Solar Panel Installation</h3><p>Cost‑saving rooftop solar systems for homes and businesses.</p></div>
-    </div>
-
-    <div class="card">
-      <img src="Solar_C.png" />
-      <div class="card-content"><h3>Solar Maintenance</h3><p>Cleaning, inspection, and system performance optimization.</p></div>
-    </div>
-
+<h2>Our Services</h2>
+<div class="grid">
+  <div class="card">
+    <img src="CCTV_W.png">
+    <div class="card-content"><h3>CCTV Installation</h3><p>Professional camera installation for homes and offices.</p></div>
   </div>
+  <div class="card">
+    <img src="Solar_M.png">
+    <div class="card-content"><h3>CCTV Maintenance</h3><p>Complete maintenance & repair services.</p></div>
+  </div>
+  <div class="card">
+    <img src="CCTV_H.png">
+    <div class="card-content"><h3>Solar Installation</h3><p>Rooftop solar solutions.</p></div>
+  </div>
+  <div class="card">
+    <img src="Solar_C.png">
+    <div class="card-content"><h3>Solar Maintenance</h3><p>Cleaning & system optimization.</p></div>
+  </div>
+</div>
 </section>
 
 <section id="quote">
-  <h2>Request a Quote</h2>
-  <form>
-    <input type="text" placeholder="Your Name" required />
-    <input type="email" placeholder="Email Address" required />
-    <input type="text" placeholder="Phone Number" required />
-    <textarea rows="5" placeholder="Describe your requirement"></textarea>
-    <button type="submit">Submit Request</button>
-  </form>
+<h2>Request a Quote</h2>
+<form>
+  <input type="text" placeholder="Your Name" required>
+  <input type="email" placeholder="Email Address" required>
+  <input type="text" placeholder="Phone Number" required>
+  <textarea rows="5" placeholder="Describe your requirement"></textarea>
+  <button type="submit">Submit</button>
+</form>
 </section>
 
 <section id="contact">
-  <h2>Contact Us</h2>
-  <p style="text-align:center; font-size:1.2rem;">
-     <strong>Phone:</strong> +91 9595353496<br>
-    <strong>Email:</strong> shivdrishtiservices@gmail.com<br>
-    <strong>Location:</strong> Tathawade, Pune
-  </p>
+<h2>Contact Us</h2>
+<p style="text-align:center">
+Phone: +91 9595353496<br>
+Email: shivdrishtiservices@gmail.com<br>
+Location: Tathawade, Pune
+</p>
 </section>
 
 <a class="whatsapp" href="https://wa.me/919595353496" target="_blank">💬</a>
 
-<footer>
-  © 2025 Shivdrishti Services. All Rights Reserved.
-</footer>
-
-<script>
-  function toggleTheme() {
-    document.body.classList.toggle('dark');
-  }
-</script>
+<footer>© 2025 Shivdrishti Services</footer>
 
 </body>
 </html>
